refactor: simplify HTTP request parsing and response streaming